--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row justify-content-center mt-4">
+      <div class="row justify-content-center mt-4 mb-4">
         <div class="col-10 col-md-6">
           <header class="d-flex align-items-center">
             <i class="bi bi-calendar-check fs-3"></i>
